Bug 348955 - dialog.cpp:414: bad if statement ?
Summary: dialog.cpp:414: bad if statement ?
Status: RESOLVED FIXED
Alias: None
Product: wacomtablet
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Jörg Ehrichs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-06-10 07:53 UTC by dcb314
Modified: 2018-04-01 18:17 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description dcb314 2015-06-10 07:53:24 UTC
[../../../src/tabletfinder/dialog.cpp:414] -> [../../../src/tabletfinder/dialog.cpp:414]: (style) Same expression on both sides of '&&'.

   if(t.hasStatusLEDsLeft && t.hasStatusLEDsLeft) {
        leds = 8;
    }
    else if(t.hasStatusLEDsLeft || t.hasStatusLEDsLeft) {
        leds = 4;
    }


Reproducible: Always
Comment 1 Valerii Malov 2018-04-01 18:17:00 UTC
Git commit 067c94da50bf495af44f8c8a8c0d1dfec392d5ee by Valeriy Malov.
Committed on 01/04/2018 at 18:05.
Pushed by valeriymalov into branch 'master'.

Fix status led values in tablet finder

This seems like a couple of typos. Overall whole StatusLED property
seems to be very odd since it's actually never ever used outside a check
in TabletBackend::setStatusLED, so hopefully I'm not breaking anything.

M  +3    -3    src/tabletfinder/dialog.cpp

https://commits.kde.org/wacomtablet/067c94da50bf495af44f8c8a8c0d1dfec392d5ee