Fix status led values in tablet finder

This seems like a couple of typos. Overall whole StatusLED property
seems to be very odd since it's actually never ever used outside a check
in TabletBackend::setStatusLED, so hopefully I'm not breaking anything.

BUG: 348955